unpackaged/main/default/objects/Automation_Log__c/Automation_Log__c.object-meta.xml
<CustomObject>
    <description>generic log used for all of our Integration responses</description>
    <label>Automation Log</label>
    <nameField>
        <displayFormat>AL-{000000000}</displayFormat>
        <label>Automation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>