unpackaged/main/default/objects/Automation_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Automation Logs</relationshipLabel>
    <relationshipName>Automation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>