unpackaged/main/default/objects/Automation_Log__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Automation Logs</relationshipLabel>
    <relationshipName>Automation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>