unpackaged/main/default/objects/Automation_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>used for our personal code to communicate with the end user.</description>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>