unpackaged/main/default/objects/Automation_Log__c/fields/RawRequest__c.field-meta.xml
<CustomField>
    <fullName>RawRequest__c</fullName>
    <label>Raw Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>