unpackaged/main/default/objects/Automation_Log__c/fields/RawResponse__c.field-meta.xml
<CustomField>
    <fullName>RawResponse__c</fullName>
    <label>Raw Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>