unpackaged/main/default/objects/Automation_Log__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Automation Logs</relationshipLabel>
    <relationshipName>Automation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>