unpackaged/main/default/objects/Automation_Log__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <description>Default RecordType for all the records</description>
    <label>Default</label>
</RecordType>