unpackaged/main/default/objects/Automation_Log__c/recordTypes/Match.recordType-meta.xml
<RecordType>
    <fullName>Match</fullName>
    <active>true</active>
    <description>Created for R1915606</description>
    <label>Match</label>
</RecordType>